# spray

./: CUSTOM_FRAMES.md  Cargo.toml  README.md  TROUBLESHOOTING.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: anim.rs  drag.rs  hotkey.rs  main.rs  state.rs  system.rs  taskbar.rs
src/animation/: anim.rs  mod.rs
src/config/: config.rs  config_applier.rs  config_watcher.rs  mod.rs
src/platform/: mod.rs  system.rs
src/window/: drag.rs  mod.rs
