[package]
name = "arisu"
version = "0.0.4"
edition = "2021"
build = "build.rs"
authors = ["Mew <mauminh.nguyen@gmail.com>"]
license = "MIT"
repository = "https://github.com/mewisme/arisu"
homepage = "https://github.com/mewisme/arisu"
keywords = ["bevy", "desktop", "animation"]

[[bin]]
name = "Arisu"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14", features = [
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "png",
] }
bevy_embedded_assets = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", default-features = false, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.dev]
opt-level = 1
debug = 1
overflow-checks = false
incremental = true
codegen-units = 256
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
