[package]
name = "spray"
version = "0.0.8"
edition = "2021"
build = "build.rs"
authors = ["Mew <mauminh.nguyen@gmail.com>"]
license = "MIT"
repository = "https://github.com/mewisme/spray"
homepage = "https://github.com/mewisme/spray"
keywords = ["bevy", "desktop", "animation"]

[[bin]]
name = "Spray"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_sprite",
  "bevy_core_pipeline",
  "bevy_asset",
  "png",
] }
bevy_embedded_assets = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", default-features = false, features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_Registry",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
